syntax = "proto3";

package kessel.inventory.v1beta2;

import "kessel/inventory/v1beta2/check_bulk_request.proto";
import "kessel/inventory/v1beta2/consistency_token.proto";
import "kessel/inventory/v1beta2/allowed.proto";
import "buf/validate/validate.proto";
import "google/rpc/status.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

// CheckBulkPermissionsResponseItem represents the result of a single permission check.
message CheckBulkResponseItem {
	Allowed allowed = 1;
}

// CheckBulkPermissionsPair associates a request item with its corresponding result.
message CheckBulkResponsePair {
	CheckBulkRequestItem request = 1;
	oneof response {
		CheckBulkResponseItem item = 2;
		google.rpc.Status error = 3;
	};
}

// CheckBulkPermissionsResponse contains the results of all permission checks in the request.
message CheckBulkResponse {
	repeated CheckBulkResponsePair pairs = 1 [(buf.validate.field).repeated.min_items = 1];
	ConsistencyToken consistency_token = 2;
}